feat: 实现 JWT 认证功能
- 添加 JJWT 依赖
- 创建 JWT 工具类（生成/验证/解析 Token）
- 创建 JWT 认证过滤器
- 创建自定义 UserDetailsService
- 更新 SecurityConfig 集成 JWT
- 添加登录/注册 DTO
- 更新用户 Controller 添加登录接口
- 添加 JWT 配置到 application.properties