@@ -1,44 +1,69 @@
 package com.graduation.hospital.config;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * Spring Security 配置
- * 开发阶段：允许所有请求访问，但配置 CSRF 和 CORS 保护
+ * 集成 JWT 认证
  */
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .authorizeHttpRequests(auth -> auth
-                .anyRequest().permitAll()  // 开发阶段允许所有请求
+            // 禁用 CSRF（使用 JWT 无状态认证）
+            .csrf(AbstractHttpConfigurer::disable)
+            // 禁用 Session（使用 JWT 无状态认证）
+            .sessionManagement(session -> session
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
-            .csrf(csrf -> csrf
-                // 针对非安全方法（GET, HEAD, TRACE, OPTIONS）不需要 CSRF token
-                // 对于修改数据的方法（POST, PUT, DELETE, PATCH）需要 CSRF token
-                // 可以通过 Cookie 自动处理
-                .ignoringRequestMatchers(
-                    "/api/hello",
+            // 配置请求授权
+            .authorizeHttpRequests(auth -> auth
+                // 公开接口
+                .requestMatchers(
                     "/api/v1/hello",
                     "/api/v2/hello",
+                    "/api/hello",
+                    "/api/v1/users/register",
                     "/swagger-ui/**",
                     "/swagger-ui.html",
                     "/scalar/**",
                     "/v3/api-docs/**"
-                )
+                ).permitAll()
+                // 其他请求需要认证
+                .anyRequest().authenticated()
             )
+            // 添加 JWT 过滤器
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+            // CORS 配置
             .cors(cors -> cors.configurationSource(corsConfigurationSource()));
 
         return http.build();
@@ -52,11 +77,11 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
 
         // 允许的源（开发环境）
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",      // 前端开发服务器
-            "http://127.0.0.1:3000",     // 本地环回地址
-            "http://localhost:8080",      // 后端开发服务器
-            "http://127.0.0.1:8080"
+        configuration.setAllowedOrigins(List.of(
+            "http://localhost:3000",
+            "http://127.0.0.1:3000",
+            "http://localhost:5173",
+            "http://127.0.0.1:5173"
         ));
 
         // 允许的 HTTP 方法
@@ -65,17 +90,10 @@ public class SecurityConfig {
         ));
 
         // 允许的请求头
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type",
-            "X-Requested-With",
-            "X-XSRF-TOKEN"  // CSRF token 头
-        ));
+        configuration.setAllowedHeaders(List.of("*"));
 
         // 暴露的响应头
-        configuration.setExposedHeaders(Arrays.asList(
-            "X-XSRF-TOKEN"
-        ));
+        configuration.setExposedHeaders(List.of("Authorization"));
 
         // 是否允许发送 Cookie
         configuration.setAllowCredentials(true);
